--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,9 @@
   "name": "Empower",
   "description": "This extension lets you give others login permissions to your Gmail account.",
   "version": "1.0",
-
+	"icons": {  "16": "icon16.png",
+           		"48": "icon48.png",
+          		"128": "icon128.png" },
   "content_scripts": [
     {
       "matches": ["https://book.jetblue.com/*", "https://www.facebook.com/*", 
@@ -15,7 +17,7 @@
   ],
 
   "browser_action": {
-    "default_icon": "EmpowerLogo.png",
+    "default_icon": "icon128.png",
     "default_popup": "login.html"
   },
   "permissions": [
