--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
       "matches": ["https://book.jetblue.com/*", "https://www.facebook.com/*", 
       "https://secure.its.yale.edu/cas/login*", "https://sso.brown.edu/idp/Authn/MCB", 
       "https://accounts.google.com/*"],
-      "js": ["action.js"]
+      "js": ["background.js"]
     }
   ],
 
