Added twitter functionality Closed #20

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     {
       "matches": ["https://book.jetblue.com/*", "https://www.facebook.com/*", "*://facebook.com/*", 
       "https://secure.its.yale.edu/cas/login*", "https://sso.brown.edu/idp/Authn/MCB", 
-      "https://accounts.google.com/*"],
+      "https://accounts.google.com/*", "https://www.twitter.com/*", "*://twitter.com/*"],
       "js": ["action.js"]
     }
   ],
