--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,9 @@
       "js": ["action.js"]
     }
   ],
+  "background": {
+      "scripts": ["background.js"]
+    },
 
   "browser_action": {
     "default_icon": "icon128.png",
